@@ -1,9 +1,10 @@
 0.0.3
     o subjectProfileTextPlot: possibility to have multiple paramValueVar in same line, fix ordering
-    o subjectProfileTextPlot: paramGroupVar, paramValueVar can be a function
+    o subjectProfileTextPlot: paramValueVar can be a function
     o subjectProfile[Interval|Event]Plot: colorPalette and getPatientColorPalette
     o subjectProfileEventPlot: shapePalette and getPatientShapePalette
     o add label attributes reported in case plot is empty
+    o add grouping variable
     o subjectProfileTheme
 0.0.2
     o remove glpgUtility from the dependencies
